tests/NormalTests/paczka1/fuzzy1/70391358.err
Error in line 1: lb4YgLvIKPR S211 30,7
Error in line 9: SHcQ9CMr8s A633 31,0
Error in line 25: lb4YgLvIKPR S980 63,07
Error in line 24: fcz8di S211 43,7
